# avigle-io

./: CMakeLists.txt  LICENSE  ioConfig.cmake.in  ioConfigVersion.cmake.in
include/io/: cmvs_reader.h  dense_reader.h  input_adapter_interface.h  input_data.h  io_api.h  nvm_reader.h  output_adapter_interface.h  output_data.h  ply_reader.h  reader_tools.h  rmv_reader.h  rmv_writer.h  version.h  version.in
src/: cmvs_reader.cc  dense_reader.cc  input_data.cc  nvm_reader.cc  output_data.cc  ply_reader.cc  rmv_reader.cc  rmv_writer.cc
